<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.senai.sp.cotia.tictactoeapp.activity.MainActivity">
    <item
        android:icon="@android:drawable/ic_menu_revert"
        android:id="@+id/menu_rezetar"
        android:orderInCategory="100"
        android:title="@string/rezetar"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_inicio"
        android:icon="@android:drawable/ic_media_previous"
        android:orderInCategory="100"
        android:title="@string/inicio"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_pref"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/preferencias"
        app:showAsAction="always" />
</menu>