<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.jogoFragment"
    android:background="@color/teal_200"
    >

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/linear1"
        android:background="@color/pink_400">

        <TextView
            android:id="@+id/jogador1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jogador_1"
            android:textColor="@color/white"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/placar1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:layout_weight="2" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:id="@+id/line"
        android:background="@color/pink_700"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintBottom_toTopOf="@id/linear2">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/pink_400"
        app:layout_constraintTop_toBottomOf="@id/linear1">

        <TextView
            android:id="@+id/jogador2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jogador_2"
            android:textColor="@color/white"
            android:layout_weight="3"/>

        <TextView
            android:id="@+id/placar2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/pink_700"
        app:layout_constraintTop_toBottomOf="@id/linear2"
        app:layout_constraintBottom_toTopOf="@id/linear3">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/pink_400"
        app:layout_constraintTop_toBottomOf="@id/linear2">

        <TextView
            android:id="@+id/velhas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jogador_3"
            android:textColor="@color/white"
            android:layout_weight="3"/>

        <TextView
            android:id="@+id/placar3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:layout_weight="2"/>

    </LinearLayout>



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/linear3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <Button
                android:id="@+id/bt_00"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:textColor="@color/pink_200"
                android:backgroundTint="@color/teal_200"
                android:textSize="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"></Button>

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"

                android:background="@color/pink_700"
                app:layout_constraintTop_toBottomOf="@id/linear1"
                app:layout_constraintBottom_toTopOf="@id/linear2">

            </LinearLayout>

            <Button android:id="@+id/bt_01"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:textColor="@color/pink_200"
                android:backgroundTint="@color/teal_200"
                android:textSize="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"></Button>

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"

                android:background="@color/pink_700"
                app:layout_constraintTop_toBottomOf="@id/linear1"
                app:layout_constraintBottom_toTopOf="@id/linear2">

            </LinearLayout>

            <Button android:id="@+id/bt_02"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:textColor="@color/pink_200"
                android:backgroundTint="@color/teal_200"
                android:textSize="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"></Button>
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"

            android:background="@color/pink_700"
            app:layout_constraintTop_toBottomOf="@id/linear1"
            app:layout_constraintBottom_toTopOf="@id/linear2">

        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <Button
                android:id="@+id/bt_10"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/teal_200"
                android:textColor="@color/pink_200"
                android:textSize="60dp"></Button>
            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"

                android:background="@color/pink_700"
                app:layout_constraintTop_toBottomOf="@id/linear1"
                app:layout_constraintBottom_toTopOf="@id/linear2">

            </LinearLayout>

            <Button android:id="@+id/bt_11"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:textColor="@color/pink_200"
                android:backgroundTint="@color/teal_200"
                android:textSize="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"></Button>
            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"

                android:background="@color/pink_700"
                app:layout_constraintTop_toBottomOf="@id/linear1"
                app:layout_constraintBottom_toTopOf="@id/linear2">

            </LinearLayout>

            <Button android:id="@+id/bt_12"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:textColor="@color/pink_200"
                android:backgroundTint="@color/teal_200"
                android:textSize="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"></Button>
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"

            android:background="@color/pink_700"
            app:layout_constraintTop_toBottomOf="@id/linear1"
            app:layout_constraintBottom_toTopOf="@id/linear2">

        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <Button
                android:id="@+id/bt_20"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:textColor="@color/pink_200"
                android:backgroundTint="@color/teal_200"
                android:textSize="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"></Button>
            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"

                android:background="@color/pink_700"
                app:layout_constraintTop_toBottomOf="@id/linear1"
                app:layout_constraintBottom_toTopOf="@id/linear2">

            </LinearLayout>

            <Button android:id="@+id/bt_21"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:textColor="@color/pink_200"
                android:backgroundTint="@color/teal_200"
                android:textSize="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"></Button>
            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"

                android:background="@color/pink_700"
                app:layout_constraintTop_toBottomOf="@id/linear1"
                app:layout_constraintBottom_toTopOf="@id/linear2">

            </LinearLayout>

            <Button android:id="@+id/bt_22"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:textColor="@color/pink_200"
                android:backgroundTint="@color/teal_200"
                android:textSize="60dp"
                android:layout_weight="1"
                android:layout_margin="5dp"></Button>
        </TableRow>








    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>